# SpaceGame

./: .travis.yml  CMakeLists.txt  README.md  cmake.sh  submit.sh  submitData.sh  visual.bat
Assets/: game.xml  resources.xml  world.xml
Enlivengine/Enlivengine/: CMakeLists.txt
Enlivengine/Enlivengine/Enlivengine/Application/: ActionSystem.cpp  ActionSystem.hpp  Application.cpp  Application.hpp  AudioSystem.cpp  ImGuiToolManager.cpp  ImGuiToolManager.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceManager.inl  Window.cpp
Enlivengine/Enlivengine/Enlivengine/Core/: ComponentDependencyTrait.hpp  ComponentManager.hpp  Components.hpp  CustomObjectEditor.hpp  CustomXmlSerialization.hpp  DataFile.cpp  DataFile.hpp  DataFileSpecialization.inl  Entity.cpp  Entity.hpp  EntityManager.hpp  ObjectEditor.hpp  ObjectEditorSpecialization.inl  PhysicComponent.cpp  PhysicComponent.hpp  PhysicSystem.cpp  PhysicSystem.hpp  Transform.cpp  Transform.hpp  World.cpp  World.hpp
Enlivengine/EnlivengineExamples/: EngineExample.cpp
Enlivengine/EnlivengineTests/Math/: Vector2_Tests.cpp
Enlivengine/EnlivengineTests/System/: Hash_Tests.cpp
Enlivengine/EnlivengineThirdParty/: CMakeLists.txt  README.md
Enlivengine/EnlivengineThirdParty/debug_break/: debugbreak.h
Enlivengine/EnlivengineThirdParty/meow_hash/: meow_hash_x64_aesni.h
Enlivengine/EnlivengineThirdParty/metrics_gui/: metrics_gui.cpp
SpaceGame/: AudioTrackMixer3000.cpp  AudioTrackMixer3000.hpp  CMakeLists.txt  Components.hpp  GameSingleton.cpp  GameSingleton.hpp  GameState.cpp  GameState.hpp  main.cpp
(+45 files in other folders)
